Atualizado header com barra de pesquisa placeholder

--- a/postagens/templates/base.html
+++ b/postagens/templates/base.html
@@ -12,10 +12,20 @@
     {% block header %}
     <header>
         <ul>
-            <li><h1>Wondercooking</h1></li>
-            <li>Pesquisar</li>
-            <li>Log in</li>
-            <li>Sign in</li>
+            <li>
+                <h1>Wondercooking</h1>
+            </li>
+            <li>
+                <div class = "bloco_pesquisa">
+                    <input type = "text" class = "pesquisa" placeholder = "Pesquisar...">
+                </div>
+            </li>
+            <li>
+                <div class = "signs">
+                    <a href = "">Log in</a>
+                    <a href = "">Sign in</a>
+                </div>    
+            </li>
         </ul>
     </header>
     {% endblock %}
