--- a/postagens/static/postagens/css/style.css
+++ b/postagens/static/postagens/css/style.css
@@ -1,12 +1,27 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: #1580aa;
+}
+
 header {
     background-color: rgb(230, 118, 151);
+    border-bottom-left-radius: 100px;
+    border-bottom-right-radius: 100px;
+    padding: 20px;
 }   
 
 header ul {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     list-style: none;
     flex-direction: row;
     align-items: center;
-    color: rgb(0, 255, 242);
+    font-weight: 600px;
+    font-size: 1.3rem;
+}
+
+.signs a {
+    text-decoration: none;
 }
