Renderização do post

--- a/postagens/templates/home.html
+++ b/postagens/templates/home.html
@@ -1,5 +1,14 @@
 {% extends "base.html" %}
 
+{%block title%}
+
+    <h2>Todos os posts</h2>
+    {{posts}}
+
+{%endblock%}
+
+
+
 {% block conteudo %}
     <h1>Bem vindo ao Wondercooking!</h1>
 {% endblock %}
