--- a/postagens/templates/base.html
+++ b/postagens/templates/base.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wondercooking</title>
+    <meta http-equiv="U-UA-Compatible" content="IE=edge">
     <link rel = "stylesheet" href = "{% static 'postagens/css/style.css' %}">
 </head>
 <body>
@@ -29,6 +30,9 @@
         </ul>
     </header>
     {% endblock %}
+
     {% block conteudo %} {% endblock %}
+    {%block title%} {%endblock%}
+    {%block content%} {%endblock%}
 </body>
 </html>
