--- a/postagens/templates/home.html
+++ b/postagens/templates/home.html
@@ -9,7 +9,7 @@
     {% if posts %}
         {% for post in posts %}
             <div class="post">
-                <h3>{{ post.titulo }}</h3>
+                <a href = "/post_detalhe/{{ post.id }}"><h3>{{ post.titulo }}</h3></a>
                 <p><strong>Autor:</strong> {{ post.autor.nome }}</p>
                 <p><strong>Data:</strong> {{ post.data }}</p>
                 <p>{{ post.descricao }}</p>
