Criação da página de register e atualizações nos settings.py, urls.py e views.py

--- a/postagens/templates/base.html
+++ b/postagens/templates/base.html
@@ -23,8 +23,8 @@
             </li>
             <li>
                 <div class = "signs">
-                    <a href = "">Log in</a>
-                    <a href = "">Sign in</a>
+                    <a href = "accounts/login/">Log in</a>
+                    <a href = "accounts/registrar/">Sign up</a>
                 </div>    
             </li>
         </ul>
