Edição html login e register

--- a/postagens/templates/registration/login.html
+++ b/postagens/templates/registration/login.html
@@ -1,15 +1,14 @@
 {% block content %}
 
   {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
+    <p>Sua senha ou usuário estão incorretos</p>
   {% endif %}
 
   {% if next %}
     {% if user.is_authenticated %}
-      <p>Your account doesn't have access to this page. To proceed,
-      please login with an account that has access.</p>
+      <p>Sua conta não tem acesso a essa página</p>
     {% else %}
-      <p>Please login to see this page.</p>
+      <p>Logue para ter acesso a essa página</p>
     {% endif %}
   {% endif %}
 
@@ -29,6 +28,6 @@
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
 
-  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+  <p><a href="{% url 'password_reset' %}">Esqueceu sua senha?</a></p>
 
 {% endblock %}
