funcao adicionar post

--- a/postagens/templates/base.html
+++ b/postagens/templates/base.html
@@ -14,7 +14,7 @@
     <header>
         <ul>
             <li>
-                <h1>Wondercooking</h1>
+                <h1>Wondercooking</h1>                         {%block criar%} {%endblock criar%}
             </li>
             <li>
                 <div class = "bloco_pesquisa">
@@ -32,5 +32,7 @@
     {% endblock %}
 
     {% block conteudo %} {% endblock %}
+
+    {%block contect%} {%endblock%}
 </body>
 </html>
