--- a/postagens/templates/home.html
+++ b/postagens/templates/home.html
@@ -3,8 +3,8 @@
 {% block title %}Todos os posts - Wondercooking{% endblock %}
 
 {% block conteudo %}
-    <h1>Bem vindo ao Wondercooking!</h1>
-    <h2>Todos os posts</h2>
+    <h1>Bem vindo ao Wondercooking! </h1>
+    <h2>Todos os posts            <a href="{%url 'criar_post' %}" >Criar uma postagem</a></h2>     
     
     {% if posts %}
         {% for post in posts %}
