Correção da função de post e edição de views.py

--- a/postagens/templates/criar_post.html
+++ b/postagens/templates/criar_post.html
@@ -2,7 +2,7 @@
 
 {%block criar%} Criar postagem{%endblock criar%}
 
-{%block content%}
+{%block conteudo%}
 
     <a href="{%url 'criar_post' %}" > Criar uma postagem</a>
 
@@ -11,4 +11,4 @@
         {{form.as_p}}
         <button type="submit">Criar</button>
     </form>
-{%endblock content%}
+{%endblock conteudo%}
