Atualizando redirecionamento para login e sign in

--- a/postagens/templates/base.html
+++ b/postagens/templates/base.html
@@ -23,8 +23,8 @@
             </li>
             <li>
                 <div class = "signs">
-                    <a href = "accounts/login/">Log in</a>
-                    <a href = "accounts/registrar/">Sign up</a>
+                    <a href = "{% url 'login' %}">Log in</a>
+                    <a href = "{% url 'registrar' %}">Sign up</a>
                 </div>    
             </li>
         </ul>
