--- a/postagens/templates/home.html
+++ b/postagens/templates/home.html
@@ -4,23 +4,36 @@
 
 {% block conteudo %}
     <h1>Bem vindo ao Wondercooking! </h1>
-    <h2>Todos os posts            <a href="{%url 'criar_post' %}" >Criar uma postagem</a></h2>     
-    
+    <h2>Todos os posts <a href="{%url 'criar_post' %}">Criar uma postagem</a></h2>     
+        {% if user.is_authenticated %}
+            <a href="{% url 'favoritos' %}">Ver meus posts favoritos</a>
+        {% endif %}
     {% if posts %}
         {% for post in posts %}
             <div class="post">
-                <a href = "/post_detalhe/{{ post.id }}"><h3>{{ post.titulo }}</h3></a>
+                <a href="/post_detalhe/{{ post.id }}"><h3>{{ post.titulo }}</h3></a>
                 <p><strong>Autor:</strong> {{ post.autor.user.username }}</p>
                 <p><strong>Data:</strong> {{ post.data }}</p>
                 <p>{{ post.descricao }}</p>
                 {% if post.imagem %}
                     <img src="{{ post.imagem.url }}" alt="{{ post.titulo }}" width="300">
                 {% endif %}
-                <p><strong>Likes:</strong> {{ post.likes.count }}</p>
-                <form method="post" action="{% url 'like_post' post.id %}">
-                    {% csrf_token %}
-                    <button type="submit">Curtir</button>
-                </form>
+                
+                <div>
+                    <form method="post" action="{% url 'like_post' post.id %}">
+                        {% csrf_token %}
+                        <button type="submit">
+                            {% if request.user in post.likes.all %}👍 Curtido{% else %}👍 Curtir{% endif %} ({{ post.likes.count }})
+                        </button>
+                    </form>
+                    
+                    <form method="post" action="{% url 'favorite_post' post.id %}">
+                        {% csrf_token %}
+                        <button type="submit">
+                            {% if request.user in post.favoritos.all %}★ Favoritado{% else %}☆ Favoritar{% endif %}
+                        </button>
+                    </form>
+                </div>
             </div>
             <hr>
         {% endfor %}
