Edição do base html dependendo do estado do login do usuário

--- a/postagens/templates/base.html
+++ b/postagens/templates/base.html
@@ -23,8 +23,13 @@
             </li>
             <li>
                 <div class = "signs">
-                    <a href = "{% url 'login' %}">Log in</a>
-                    <a href = "{% url 'registrar' %}">Sign up</a>
+                    {%if user.is_authenticated %}
+                        {{user.username}}
+                        <a href = "{% url 'login' %}">Log out</a>
+                    {%else%}
+                        <a href = "{% url 'login' %}">Log in</a>
+                        <a href = "{% url 'registrar' %}">Sign up</a>
+                    {%endif%}
                 </div>    
             </li>
         </ul>
