--- a/postagens/templates/base.html
+++ b/postagens/templates/base.html
@@ -39,5 +39,10 @@
     {% block conteudo %} {% endblock %}
 
     {%block contect%} {%endblock%}
+
+    {%block footer%} 
+        <footer>
+        </footer>
+    {% endblock %}
 </body>
 </html>
