--- a/postagens/templates/home.html
+++ b/postagens/templates/home.html
@@ -13,7 +13,7 @@
             <div class="post">
                 <a href="/post_detalhe/{{ post.id }}"><h3>{{ post.titulo }}</h3></a>
                 <p><strong>Autor:</strong> {{ post.autor.user.username }}</p>
-                <p><strong>Data:</strong> {{ post.data }}</p>
+                <p><strong>Postado em:</strong> {{ post.data }}</p>
                 <p>{{ post.descricao }}</p>
                 {% if post.imagem %}
                     <img src="{{ post.imagem.url }}" alt="{{ post.titulo }}" width="300">
