Criação CSS do criar_post.html

--- a/postagens/templates/base.html
+++ b/postagens/templates/base.html
@@ -8,6 +8,7 @@
     <title>Wondercooking</title>
     <meta http-equiv="U-UA-Compatible" content="IE=edge">
     <link rel = "stylesheet" href = "{% static 'postagens/css/style.css' %}">
+    {% block extra_css %}{% endblock %}
 </head>
 <body>
     {% block header %}
