--- a/postagens/templates/criar_post.html
+++ b/postagens/templates/criar_post.html
@@ -13,13 +13,13 @@
         {% csrf_token %}
         
         <label for="titulo" class="rotulo">Título:</label>
-        <input type="text" name="titulo" id="titulo" class="entrada" required>
+        <input type="text" name="Título da publicação" id="titulo" class="entrada" required>
 
         <label for="descricao" class="rotulo">Descrição:</label>
-        <textarea name="descricao" id="descricao" class="area descricao" required></textarea>
+        <textarea name="Descrição do post" id="descricao" class="area descricao" required></textarea>
 
         <label for="imagem" class="rotulo">Imagem:</label>
-        <input type="file" name="imagem" id="imagem" class="entrada" required>
+        <input type="file" name="Imagem do post" id="imagem" class="entrada" required>
 
         <button type="submit" class="botao">Criar Postagem</button>
         
