Ajustando mais uma vez

--- a/postagens/templates/criar_post.html
+++ b/postagens/templates/criar_post.html
@@ -9,7 +9,7 @@
 
 {% block conteudo %}
     
-    <form method="POST" enctype="multipart/form-data" class="formulario" enctype="multipart/form-data">
+    <form method="POST" enctype="multipart/form-data" class="formulario">
         {% csrf_token %}
         
         <label for="titulo" class="rotulo">Título:</label>
