--- a/postagens/static/postagens/css/register.css
+++ b/postagens/static/postagens/css/register.css
@@ -3,7 +3,7 @@
     margin: 80px auto;
     padding: 40px;
     text-align: center;
-    background-color: #ecb8e1;
+    background-color: #b8ecbb;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
@@ -44,7 +44,7 @@
 
 .botao-login:hover,
 .botao-registro:hover {
-    background-color: #94177f;
+    background-color: #c70a0a;
 }
 
 .mensagem {
