--- a/staticfiles/postagens/css/style.css
+++ b/staticfiles/postagens/css/style.css
@@ -61,3 +61,10 @@ header h1 {
   color: #fff;
   cursor: pointer;
 }
+
+.post {
+  padding: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
