--- a/postagens/templates/destaques.html
+++ b/postagens/templates/destaques.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Todos os posts - Wondercooking{% endblock %}
+{% block title %}Destaques semanais - Wondercooking{% endblock %}
 
 {% block conteudo %}
     <h1>Bem vindo ao Wondercooking! </h1>
-    <h2><a href="{%url 'criar_post' %}">Criar uma postagem</a></h2>     
+    <h2>Destaques semanais
     {% if posts %}
         {% for post in posts %}
             <div class="post">
